PR5017: gcc4.3 build fixes

2007-12-11  Frank Ch. Eigler  <fche@elastic.org>

	* staptree.cxx, staptree.h: More GCC 4.3 build fixes from
	Eugeniy Meshcheryakov <eugen@debian.org>.